--- a/.cproject
+++ b/.cproject
@@ -121,6 +121,22 @@
 									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/apps/nrf_uart/include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/ble/ble_services/ble_dis&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/libraries/fifo&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/libraries/fstorage/config&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/libraries/fstorage&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/toolchain&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/libraries/experimental_section_vars&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/drivers_nrf/twi_master&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/external/freertos/source/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/external/freertos/portable/CMSIS/nrf52&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/toolchain/CMSIS/Include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/external/freertos/portable/GCC/nrf52&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/external/freertos/config&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/drivers_nrf/clock&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/softdevice/s132/headers/nrf52&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/components/softdevice/s132/headers&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/apps/nrf_ble/config&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/apps/nrf_ble/include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${SDK_ROOT}/lib/freertos/include&quot;"/>
 								</option>
 								<inputType id="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.input.2016133589" superClass="ilg.gnuarmeclipse.managedbuild.cross.tool.c.compiler.input"/>
 							</tool>
